# soil-quality-easy-monitoring

backend/esp-to-esp/: datasender.py  mac-addresses  main_a.py  main_b.py  sender-boot.py  util.py
backend/serial-fastapi/: pyproject.toml
backend/serial-fastapi/serial_fastapi/: main.py
backend/sqm/: sqm.ino
frontend/: .swp  package-lock.json
frontend/src/: app.html
frontend/src/lib/: api.ts  globals.ts  utils.ts
frontend/src/lib/components/: Main.svelte  RawDataTable.svelte  VisualSection.svelte
frontend/src/routes/: +page.svelte
frontend/static/: style.css
